--- a/blog/linux/1.md
+++ b/blog/linux/1.md
@@ -48,7 +48,7 @@ day：表示日期，可以是从1到31之间的任何整数。
 month：表示月份，可以是从1到12之间的任何整数。 
 week：表示星期几，可以是从0到7之间的任何整数，这里的0或7代表星期日。  
 command：要执行的命令，可以是系统命令，也可以是自己编写的脚本文件。   
-![crontab格式说明](/img/linux/1_1.png)  
+![crontab格式说明](/img/linux/1-1.png)  
 在以上各个字段中，还可以使用以下特殊字符：   
 星号（*）：代表所有可能的值，例如month字段如果是星号，则表示在满足其它字段的制约条件后每月都执行该命令操作。   
 逗号（,）：可以用逗号隔开的值指定一个列表范围，例如，“1,2,5,7,8,9”    
