--- a/blog/diary/2.md
+++ b/blog/diary/2.md
@@ -1,3 +1,7 @@
+---
+prev: ./1.md
+next: ./3.md
+---
 # 使用 VuePress 搭建本博客
 ## 背景
 闲来无事，想写写博客，记录一下自己的经历，分享和记录一下自己解决问题的经验。但是一些通用网站的界面有点丑，而且没有个人主页，所以就想自己弄一个。
