--- a/blog/docker/2.md
+++ b/blog/docker/2.md
@@ -4,6 +4,8 @@ next: 3.md
 ---
 # Docker常用命令
 
+注意：可以使用id代替name，并且id不需要打全，只需打前几位，能唯一辨认出对应的image或container即可
+
 拉取docker镜像
 
 ```bash
@@ -21,7 +23,7 @@ docker images
 ```bash
 docker rmi  docker.io/tomcat:7.0.77-jre7   
 # 或者  
-docker rmi b39c68b7af30
+docker rmi [containerid]
 ```
 
 查看当前有哪些容器正在运行
@@ -45,11 +47,11 @@ docker restart container_name/container_id
 
 后台启动一个容器后，如果想进入到这个容器，可以使用attach命令：
 ```bash
-docker attach container_name/container_id
+docker attach container_name 或 container_id
 ```
 删除容器的命令：
 ```bash
-docker rm container_name/container_id
+docker rm container_name 或 container_id
 ```
 查看当前系统Docker信息
 ```bash
