--- a/blog/docker/4.md
+++ b/blog/docker/4.md
@@ -1,3 +1,7 @@
+---
+prev: 3.md
+next: false
+---
 # Windows中，使用VNC远程连接Docker中的镜像桌面系统
 ## 创建带桌面的镜像环境
 去[DockerHub](https://hub.docker.com/)找到自己想要创建的镜像，此处以[Ubuntu系统+Lxde桌面](https://hub.docker.com/r/dorowu/ubuntu-desktop-lxde-vnc)为例，也可以以系统镜像为基础，自己安装想要的桌面和VNC。
