--- a/blog/java/1.md
+++ b/blog/java/1.md
@@ -1,6 +1,6 @@
 ---
 prev: false
-next: false
+next: ./2.md
 ---
 # 使用Nexus搭建Maven私服
 ## 1. 安装Java环境
@@ -26,7 +26,6 @@ next: false
 nexus-3.17.0-01版本下载地址：   
 [Linux](https://sonatype-download.global.ssl.fastly.net/repository/repositoryManager/3/nexus-3.17.0-01-unix.tar.gz)     
 [Windows](https://sonatype-download.global.ssl.fastly.net/repository/repositoryManager/3/nexus-3.17.0-01-win64.zip)
-
 ### 3.2 启动并查看admin用户密码
 * **Windows**：用Windows Shell或者CMD直接运行nexus目录下的bin目录中的nexus，运行`./nexus -run`，或者安装服务，`./nexus -install`，再启动服务`net start nexus` 
 * **Linux**：`./nexus start`
@@ -34,6 +33,9 @@ Nexus启动的默认端口是8081，配置文件在etc目录中。
 服务启动后，进入页面，管理员登录用户名为：admin，密码在sonatype-work目录中的nexus3目录中的admin.password文件中。
 ### 3.3 创建仓库
 #### 3.3.1 创建可部署仓库
-创建maven2（hosted）仓库，输入名称，选好仓库Version policy，将deployment policy更改为allow redeploy。
+创建maven2（hosted）仓库，输入名称，选好仓库Version policy，将deployment policy更改为allow redeploy。   
+**注意：    
+（1）只有allow redepoly的仓库才能上传jar包。    
+（2）只有与仓库Version policy对应的应用版本才能上传jar包。**
 #### 3.3.2 创建代理仓库
 创建maven2（proxy）仓库，输入名称，选好仓库Version policy，输入代理的远程仓库地址。
