--- a/blog/java/2.md
+++ b/blog/java/2.md
@@ -25,7 +25,7 @@ next: false
 ```
 ## 2. 在Gradle项目中使用Nexus
 ### 2.1 依赖Nexus私服仓库
-修改项目的build.gradle文件，在repositories函数的参数中加入maven {url **你的私服仓库地址**'} 即可。
+修改项目的build.gradle文件，在repositories函数的参数中加入maven {url **你的私服仓库地址**} 即可。
 ### 2.2 部署到仓库
 创建task并运行
 ```groovy
