--- a/blog/docker/2.md
+++ b/blog/docker/2.md
@@ -2,19 +2,20 @@
 
 注意：可以使用id代替name，并且id不需要打全，只需打前几位，能唯一辨认出对应的image或container即可
 
-拉取docker镜像
+## 拉取docker镜像
 
 ```bash
 docker pull image_name
 ```
 
+## 查看镜像
 查看宿主机上的镜像，Docker镜像保存在/var/lib/docker目录下:
 
 ```bash
 docker images
 ```
 
-删除镜像
+## 删除镜像
 
 ```bash
 docker rmi  docker.io/tomcat:7.0.77-jre7   
@@ -22,40 +23,47 @@ docker rmi  docker.io/tomcat:7.0.77-jre7
 docker rmi [containerid]
 ```
 
+## 正在运行的容器
 查看当前有哪些容器正在运行
 
 ```bash
 docker ps
 ```
 
-查看所有容器
+## 查看所有容器
 
 ```bash
 docker ps -a
 ```
 
-启动、停止、重启容器命令：
+## 启动、停止、重启容器命令：
 ```bash
-docker start container_name/container_id
-docker stop container_name/container_id
-docker restart container_name/container_id
+docker start [container_name]|[container_id]
+docker stop [container_name]|[container_id]
+docker restart [container_name]|[container_id]
 ```
 
+## 进入已启动的容器
 后台启动一个容器后，如果想进入到这个容器，可以使用attach命令：
 ```bash
-docker attach container_name 或 container_id
+docker attach [container_name]|[container_id]
 ```
-删除容器的命令：
+注意：使用这个命令会有一个问题，当容器中的任何tty被阻塞的时候，
+这个命令进去就会是那个阻塞的tty，所以可以使用执行容器中的程序命令来进入控制台：
 ```bash
-docker rm container_name 或 container_id
+docker exec -it [container_name]|[container_id] /bin/bash
 ```
-查看当前系统Docker信息
+## 删除容器的命令：
+```bash
+docker rm [container_name]|[container_id]
+```
+## 查看当前系统Docker信息
 ```bash
 docker info
 ```
-从Docker hub上下载某个镜像:
+## 从Docker hub上下载某个镜像:
 ```bash
 docker pull centos:latest
 docker pull centos:latest
 ```
-执行docker pull centos会将Centos这个仓库下面的所有镜像下载到本地repository。
+执行docker pull CentOs会将CentOs这个仓库下面的所有镜像下载到本地repository。
