--- a/blog/java/2.md
+++ b/blog/java/2.md
@@ -1,4 +1,4 @@
-# 在Maven和Gradle项目中使用Nexus
+# 在Maven和Gradle项目中使用Nexus私服
 ## 1. 在Maven项目中使用Nexus
 ### 1.1 配置Maven
 配置Maven的setting.xml配置文件，在server标签中添加针对服务器的用户名密码支持。
